# beads-explorer

./: Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
src/: app.rs  main.rs  model.rs  ui.rs
