[package]
name = "beads-explorer"
version = "0.1.0"
edition = "2021"
description = "A fast terminal explorer for beads issue graphs"
license = "MIT"

[[bin]]
name = "be"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"

[profile.release]
strip = true
lto = true

